cmake_minimum_required(VERSION 2.8.4)

LIST (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)

project(CellSearch)

# 添加你的源文件
add_executable(CellSearch search.cpp)

# 设置C++标准
set_property(TARGET CellSearch PROPERTY CXX_STANDARD 11)

# 查找IT++库
FIND_PACKAGE( Boost COMPONENTS thread system REQUIRED )
INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
FIND_PACKAGE( ITPP REQUIRED )
INCLUDE_DIRECTORIES("${ITPP_INCLUDE_DIR}")
FIND_PACKAGE( FFTW REQUIRED )
INCLUDE_DIRECTORIES("${FFTW_INCLUDE_DIR}")
SET( HAVE_BLADERF "NO_BLADERF")
SET( HAVE_HACKRF "NO_HACKRF")
SET( HAVE_RTLSDR "NO_RTLSDR")
FIND_PACKAGE( Curses REQUIRED )
INCLUDE_DIRECTORIES("${CURSES_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${PROJECT_BINARY_DIR}")
